--- a/Lectures/Lecture_3_ER_Relational_SQL_2/Lecture_3_Examples.ipynb
+++ b/Lectures/Lecture_3_ER_Relational_SQL_2/Lecture_3_Examples.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        " ('76543', 'Brown', 'Comp. Sci.', Decimal('58'))]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,11 +297,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pymysql"
+    "import pymysql\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -316,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,23 +425,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pandas.read_sql(\"select * from db_book.student limit 10\", con=engine)"
+    "from sqlalchemy import text\n",
+    "\n",
+    "# Execute the query using SQLAlchemy\n",
+    "connection = engine.connect()\n",
+    "result = connection.execute(text(\"select * from db_book.student limit 10\"))\n",
+    "\n",
+    "# Fetch all rows into a list\n",
+    "data = result.fetchall()\n",
+    "\n",
+    "# Convert the list into a Pandas DataFrame\n",
+    "columns = result.keys()  # this fetches the column names\n",
+    "df = pd.DataFrame(data, columns=columns)\n",
+    "\n",
+    "# Close the connection\n",
+    "connection.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -476,90 +484,90 @@
        "      <td>00128</td>\n",
        "      <td>Zhang</td>\n",
        "      <td>Comp. Sci.</td>\n",
-       "      <td>102.0</td>\n",
+       "      <td>102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>12345</td>\n",
        "      <td>Shankar</td>\n",
        "      <td>Comp. Sci.</td>\n",
-       "      <td>32.0</td>\n",
+       "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>19991</td>\n",
        "      <td>Brandt</td>\n",
        "      <td>History</td>\n",
-       "      <td>80.0</td>\n",
+       "      <td>80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>23121</td>\n",
        "      <td>Chavez</td>\n",
        "      <td>Finance</td>\n",
-       "      <td>110.0</td>\n",
+       "      <td>110</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>44553</td>\n",
        "      <td>Peltier</td>\n",
        "      <td>Physics</td>\n",
-       "      <td>56.0</td>\n",
+       "      <td>56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>45678</td>\n",
        "      <td>Levy</td>\n",
        "      <td>Physics</td>\n",
-       "      <td>46.0</td>\n",
+       "      <td>46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>54321</td>\n",
        "      <td>Williams</td>\n",
        "      <td>Comp. Sci.</td>\n",
-       "      <td>54.0</td>\n",
+       "      <td>54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>55739</td>\n",
        "      <td>Sanchez</td>\n",
        "      <td>Music</td>\n",
-       "      <td>38.0</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>70557</td>\n",
        "      <td>Snow</td>\n",
        "      <td>Physics</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>76543</td>\n",
        "      <td>Brown</td>\n",
        "      <td>Comp. Sci.</td>\n",
-       "      <td>58.0</td>\n",
+       "      <td>58</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      ID      name   dept_name  tot_cred\n",
-       "0  00128     Zhang  Comp. Sci.     102.0\n",
-       "1  12345   Shankar  Comp. Sci.      32.0\n",
-       "2  19991    Brandt     History      80.0\n",
-       "3  23121    Chavez     Finance     110.0\n",
-       "4  44553   Peltier     Physics      56.0\n",
-       "5  45678      Levy     Physics      46.0\n",
-       "6  54321  Williams  Comp. Sci.      54.0\n",
-       "7  55739   Sanchez       Music      38.0\n",
-       "8  70557      Snow     Physics       0.0\n",
-       "9  76543     Brown  Comp. Sci.      58.0"
+       "      ID      name   dept_name tot_cred\n",
+       "0  00128     Zhang  Comp. Sci.      102\n",
+       "1  12345   Shankar  Comp. Sci.       32\n",
+       "2  19991    Brandt     History       80\n",
+       "3  23121    Chavez     Finance      110\n",
+       "4  44553   Peltier     Physics       56\n",
+       "5  45678      Levy     Physics       46\n",
+       "6  54321  Williams  Comp. Sci.       54\n",
+       "7  55739   Sanchez       Music       38\n",
+       "8  70557      Snow     Physics        0\n",
+       "9  76543     Brown  Comp. Sci.       58"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +730,7 @@
        " ('USA', 1004, Decimal('3273280.05'))]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,19 +871,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "baseball_csv_path = \\\n",
-    "    \"/Users/donaldferguson/Dropbox/00Spring2023/Intro_to_Databases_S23/data/baseballdatabank-2022/core\""
+    "    \"/Users/donaldferguson/Dropbox/00Spring2023/Intro_to_Databases_S23/data/baseballdatabank-2022/core\"\n",
+    "### Need to change the / to \\ for Windows OS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] 系统找不到指定的路径。: '/Users/donaldferguson/Dropbox/00Spring2023/Intro_to_Databases_S23/data/baseballdatabank-2022/core'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [29], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m file_names \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbaseball_csv_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m file_names\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] 系统找不到指定的路径。: '/Users/donaldferguson/Dropbox/00Spring2023/Intro_to_Databases_S23/data/baseballdatabank-2022/core'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "file_names = os.listdir(baseball_csv_path)\n",
@@ -1044,9 +1065,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+pymysql://root:***@localhost\n",
+      "(pymysql.err.OperationalError) (1049, \"Unknown database 'lahmansbaseballdb'\")\n",
+      "[SQL: describe lahmansbaseballdb.people]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n"
+     ]
+    }
+   ],
    "source": [
     "%sql describe lahmansbaseballdb.people"
    ]
@@ -1556,7 +1588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.8"
   },
   "toc": {
    "base_numbering": 1,
@@ -1578,5 +1610,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
