--- a/HomeworkAssignments/HW1-Part2-Nonprogramming/F23-W4111-HW1-P2-NP.ipynb
+++ b/HomeworkAssignments/HW1-Part2-Nonprogramming/F23-W4111-HW1-P2-NP.ipynb
@@ -60,15 +60,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yuanxi Li\n",
+      "yl5127\n",
+      "Nonprogramming Track\n"
+     ]
+    }
+   ],
    "source": [
     "# Print your name, uni, and track below\n",
     "\n",
-    "name = \"Joshua Zhou\"\n",
-    "uni = \"jz3311\"\n",
-    "track = \"Cool Track\"\n",
+    "name = \"Yuanxi Li\"\n",
+    "uni = \"yl5127\"\n",
+    "track = \"Nonprogramming Track\"\n",
     "\n",
     "print(name)\n",
     "print(uni)\n",
@@ -98,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,9 +133,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+pymysql://root:***@localhost\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>1</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1,)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql SELECT 1"
    ]
@@ -139,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,9 +232,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+pymysql://root:***@localhost\n",
+      "0 rows affected.\n",
+      " * mysql+pymysql://root:***@localhost\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql DROP SCHEMA IF EXISTS lahmans_hw1\n",
     "%sql CREATE SCHEMA lahmans_hw1"
@@ -199,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,13 +306,8 @@
     "\n",
     "for f in csv_files:\n",
     "    load_csv(data_dir, f, schema)\n",
-    "    print(\"Loaded file:\", f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    print(\"Loaded file:\", f)\n",
+    "\n",
     "<hr style=\"height:2px;\">"
    ]
   },
@@ -268,9 +327,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+pymysql://root:***@localhost\n",
+      "0 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql USE lahmans_hw1"
    ]
@@ -285,9 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -361,11 +437,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+pymysql://root:***@localhost\n",
+      "0 rows affected.\n",
+      "0 rows affected.\n",
+      "0 rows affected.\n",
+      "(pymysql.err.DataError) (1265, \"Data truncated for column 'throws' at row 18908\")\n",
+      "[SQL: -- Convert bats and throws to ENUM\n",
+      "ALTER TABLE People\n",
+      "MODIFY bats ENUM('L', 'R', 'B'),\n",
+      "MODIFY throws ENUM('L', 'R');]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/9h9h)\n"
+     ]
+    }
+   ],
    "source": [
     "%%sql\n",
+    "\n",
+    "-- 1. Modify the structure:\n",
+    "\n",
+    "-- Convert playerID, retroID, and bbrefID to CHAR\n",
+    "ALTER TABLE People\n",
+    "MODIFY playerID CHAR(9),\n",
+    "MODIFY retroID CHAR(8),\n",
+    "MODIFY bbrefID CHAR(9);\n",
+    "\n",
+    "-- Modify the ENUM to account for the 'S' and 'None' values:\n",
+    "ALTER TABLE People\n",
+    "MODIFY throws ENUM('L', 'R', 'S', 'None');\n",
+    "\n",
+    "-- Convert DOUBLE columns to INT\n",
+    "ALTER TABLE People\n",
+    "MODIFY birthYear INT,\n",
+    "MODIFY birthMonth INT,\n",
+    "MODIFY birthDay INT,\n",
+    "MODIFY deathYear INT,\n",
+    "MODIFY deathMonth INT,\n",
+    "MODIFY deathDay INT,\n",
+    "MODIFY weight INT,\n",
+    "MODIFY height INT;\n",
+    "\n",
+    "-- Convert bats and throws to ENUM\n",
+    "ALTER TABLE People\n",
+    "MODIFY bats ENUM('L', 'R', 'B'),\n",
+    "MODIFY throws ENUM('L', 'R');\n",
+    "\n",
+    "-- Add dateOfBirth and dateOfDeath columns\n",
+    "ALTER TABLE People\n",
+    "ADD dateOfBirth DATE,\n",
+    "ADD dateOfDeath DATE;\n",
+    "\n",
+    "-- 2. Update dateOfBirth and dateOfDeath columns:\n",
+    "UPDATE People\n",
+    "SET dateOfBirth = CASE \n",
+    "    WHEN birthYear IS NOT NULL AND birthMonth IS NOT NULL AND birthDay IS NOT NULL \n",
+    "    THEN CONCAT(birthYear, '-', birthMonth, '-', birthDay)\n",
+    "    ELSE NULL\n",
+    "END,\n",
+    "dateOfDeath = CASE \n",
+    "    WHEN deathYear IS NOT NULL AND deathMonth IS NOT NULL AND deathDay IS NOT NULL \n",
+    "    THEN CONCAT(deathYear, '-', deathMonth, '-', deathDay)\n",
+    "    ELSE NULL\n",
+    "END;\n",
+    "\n",
+    "-- 3. Convert debut and finalGame to DATE type\n",
+    "ALTER TABLE People\n",
+    "MODIFY debut DATE,\n",
+    "MODIFY finalGame DATE;\n",
     "\n"
    ]
   },
@@ -1010,9 +1154,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
